feat: Implement icons for all browser

--- a/index.html
+++ b/index.html
@@ -10,14 +10,35 @@
     <meta property="og:type" content="" />
     <meta property="og:url" content="" />
     <meta property="og:image" content="" />
+    <meta name="theme-color" content="#f4f4f5" />
+    <meta name="msapplication-TileColor" content="#f4f4f5" />
+    <meta name="msapplication-config" content="browserconfig.xml" />
 
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="img/icons/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="img/icons/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="img/icons/favicon-16x16.png"
+    />
     <link rel="manifest" href="site.webmanifest" />
-    <link rel="apple-touch-icon" href="icon.png" />
-    <!-- Place favicon.ico in the root directory -->
-
+    <link
+      rel="mask-icon"
+      href="img/icons/safari-pinned-tab.svg"
+      color="#ffcb37"
+    />
+    <link rel="shortcut icon" href="img/icons/favicon.ico" />
     <link rel="stylesheet" href="css/main.css" />
-
-    <meta name="theme-color" content="#fafafa" />
   </head>
 
   <body>
