feat: Connect with google analytics

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       };
       ga.q = [];
       ga.l = +new Date();
-      ga("create", "UA-XXXXX-Y", "auto");
+      ga("create", "G-5B7R2F5EPV", "auto");
       ga("set", "anonymizeIp", true);
       ga("set", "transport", "beacon");
       ga("send", "pageview");
