feat: Update misc auth login

--- a/auth/login.html
+++ b/auth/login.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Login - Hikstore</title>
+    <title>Log in - Hikstore</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -76,18 +76,8 @@
               playsinline=""
               preload="none"
               autoplay=""
-              class="absolute inset-0"
-              style="
-                position: absolute;
-                top: -2px;
-                left: -2px;
-                right: -2px;
-                bottom: -2px;
-                width: calc(100% + 4px);
-                height: calc(100% + 4px);
-                -o-object-fit: cover;
-                object-fit: cover;
-              "
+              class="absolute inset-0 object-cover"
+              style="width: calc(100% + 1rem); height: calc(100% + 0.5rem)"
             >
               <source
                 src="https://videos.ctfassets.net/l595fda2nfqd/42P8s5tGtAtFZJbwZf7CrT/1977a6b92b8bea13df75ae2564b7a237/160years_Home_Teaser.mp4"
@@ -135,7 +125,7 @@
               </div>
               <p class="text-center">
                 Don't have an account yet?
-                <a href="/auth/login.html" class="mb-4 text-primary underline"
+                <a href="/auth/signup.html" class="mb-4 text-primary underline"
                   >Sign up</a
                 >
               </p>
