--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </head>
 
   <body>
-    <header id="header" class="sticky inset-0 h-20 z-100 bg-gray">
+    <header id="header" class="sticky inset-0 h-20 z-100 bg-gray sm-hidden">
       <div class="container h-full">
         <div class="flex-row h-full justify-start items-center gap-4">
           <a href="/" class="flex-row items-center mr-auto">
@@ -68,7 +68,7 @@
             <button class="text-xl relative sm-hidden">
               <i class="fa-regular fa-bag-shopping"></i>
               <span
-                class="absolute text-xs text-white -top-1 -right-2 bg-primary h-4 aspect-square rounded-full"
+                class="absolute text-xs text-white -top-1 -right-2 bg-primary h-4 w-4 aspect-square rounded-full"
                 >0</span
               >
             </button>
@@ -100,6 +100,45 @@
         </div>
       </div>
     </header>
+    <nav
+      id="app-bar"
+      class="fixed inset-0 top-auto h-20 z-100 bg-gray -shadow-md hidden"
+    >
+      <div class="grid h-full grid-cols-5">
+        <a href="/" class="flex-row items-center justify-center">
+          <img
+            class="h-12"
+            draggable="false"
+            src="img/logo.png"
+            alt="Hikstore"
+          />
+        </a>
+        <button class="text-2xl">
+          <i class="fa-regular fa-magnifying-glass"></i>
+        </button>
+        <div class="relative">
+          <button
+            class="absolute btn-menu bg-white w-16 h-16 flex-row items-center justify-center rounded-full shadow-xl bottom-12 left-0 right-0 mx-auto"
+          >
+            <span class="menu-icon" style="margin-top: 0.25rem">
+              <span></span>
+            </span>
+          </button>
+        </div>
+        <button class="flex-row justify-center items-center">
+          <div class="w-max h-max relative text-2xl">
+            <i class="fa-regular fa-bag-shopping"></i>
+            <span
+              class="absolute text-xs text-white -top-1 -right-2 bg-primary h-4 w-4 aspect-square rounded-full"
+              >0</span
+            >
+          </div>
+        </button>
+        <button class="text-2xl flex-col justify-center items-center">
+          <i class="fa-regular fa-user"></i>
+        </button>
+      </div>
+    </nav>
 
     <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
     <script>
