--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </head>
 
   <body>
-    <header id="header" class="sticky inset-0 h-20 z-100 bg-gray sm-hidden">
+    <header id="header" class="sticky inset-0 h-20 z-100 bg-gray">
       <div class="container h-full">
         <div class="flex-row h-full justify-start items-center gap-4">
           <a href="/" class="flex-row items-center mr-auto">
