fix: Update misc auth condition

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               >
             </button>
             <button class="text-xl flex-row items-center gap-2">
-              <span class="user-email text-sm hidden sm-block"></span>
+              <span class="user-email text-sm"></span>
               <i class="fa-regular fa-user"></i>
             </button>
           </nav>
@@ -86,13 +86,13 @@
             </a>
             <a
               href="/auth/login.html"
-              class="border-2 border-primary rounded px-5 py-2"
+              class="border-2 border-primary rounded px-5 py-2 sm-hidden"
             >
               Log In
             </a>
           </nav>
-          <button class="btn-menu flex-row items-center gap-2 sm-hidden">
-            <span class="text-lg">MENU</span>
+          <button class="btn-menu flex-row items-center gap-2">
+            <span class="text-lg sm-hidden">MENU</span>
             <span class="menu-icon">
               <span></span>
             </span>
