test: Update button signup route

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           </nav>
           <nav class="not-auth flex-row items-center gap-2 hidden">
             <a
-              href="/auth/signup.html"
+              href="/auth/signup"
               class="border-2 border-primary text-white bg-primary rounded px-5 py-2 sm-hidden"
             >
               Sign Up
