feat: add feature product

--- a/footer/index.html
+++ b/footer/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/main.css">
+    <script src="https://kit.fontawesome.com/f3d2ade942.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
