--- a/auth/signup.html
+++ b/auth/signup.html
@@ -3,13 +3,18 @@
   <head>
     <meta charset="utf-8" />
     <title>Sign up - Hikstore</title>
-    <meta name="description" content="" />
+    <meta
+      name="description"
+      content="Hikstore offers a wide selection of Clothing, Shoes, Technical Hardware & Avalanche Safety Equipment. Invite your friends and earn a free shipping!"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <meta property="og:title" content="" />
-    <meta property="og:type" content="" />
-    <meta property="og:url" content="" />
+    <meta property="og:title" content="Sign up - Hikstore" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://hikstore.pages.dev/auth/signup" />
     <meta property="og:image" content="" />
+    <meta property="og:locale" content="en" />
+    <link rel="canonical" href="https://hikstore.pages.dev/auth/signup" />
     <meta name="theme-color" content="#f4f4f5" />
     <link rel="manifest" href="/site.webmanifest" />
     <link rel="shortcut icon" href="/img/icons/favicon.ico" />
@@ -90,7 +95,7 @@
           <div
             class="flex-col justify-center items-center h-full sm-row-span-2"
           >
-            <h2 class="text-4xl mb-2">Sign Up</h2>
+            <h1 class="text-4xl mb-2">Sign Up</h1>
             <p class="text-lg mb-6">Sign up to create new account</p>
             <form
               action=""
