--- a/auth/login.html
+++ b/auth/login.html
@@ -59,14 +59,14 @@
         <div
           class="flex-row h-full justify-start items-center gap-4 sm-justify-center"
         >
-          <a href="/" class="flex-row items-center">
+          <a href="/index.html" class="flex-row items-center">
             <img
               class="h-12"
               draggable="false"
-              src="/img/logo-light.png"
+              src="/img/logo.png"
               alt="Hikstore"
             />
-            <h2 class="text-2xl text-white">Hikstore</h2>
+            <h2 class="text-2xl">Hikstore</h2>
           </a>
         </div>
       </div>
@@ -87,7 +87,7 @@
               style="width: calc(100% + 1rem); height: calc(100% + 0.5rem)"
             >
               <source
-                src="https://videos.ctfassets.net/l595fda2nfqd/42P8s5tGtAtFZJbwZf7CrT/1977a6b92b8bea13df75ae2564b7a237/160years_Home_Teaser.mp4"
+                src="/img/videos/login.mp4"
                 type="video/mp4"
               />
             </video>
