feat: add feature product

--- a/product/index.html
+++ b/product/index.html
@@ -242,7 +242,7 @@
   <script>
     const openmodal = document.querySelectorAll("[data-modal-target]");
     const closemodal =  document.querySelectorAll("[data-close-button]");
-    const overlay = document.getElementById('overlay')
+    const overlay = document.getElementById('overlay');
 
     openmodal.forEach(button => {
   button.addEventListener('click', () => {
